# stock-market-bot

./: README.md
chatgpt/: pyproject.toml
chatgpt/app/: Dockerfile  pyproject.toml
chatgpt/app/app/: main.py
chatgpt/app/utils/: send_requests.py
