[tool.poetry]
name = "chatgpt"
version = "0.1.0"
description = "Microservice for interacting with ChatGPT API."
authors = ["Vladimir kiryanov_vova_134@mail.ru"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
