[tool.poetry]
name = "chatgpt"
version = "0.1.0"
description = "Microservice for interacting with ChatGPT API."
authors = ["Vladimir vovcha5854@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = "*"
openai = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"